--- a/style.css
+++ b/style.css
@@ -17,9 +17,11 @@ h1 {
 } */
 
 .navbar {
+    display: flex;
+    margin: auto;
     background-color: #333;
     overflow: hidden;
-    position: fixed;
+    position: absolute;
     top: 0;
     width: 100%;
     /* background-color: blue;
