--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@ body {
     /* justify-content: center;
     text-align: center;
     align-items: center; */
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
     background-color: blanchedalmond;
 }
 
